--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,14 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@import url('https://fonts.googleapis.com/css2?family=Work+Sans&display=swap');
+
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: 'Work Sans', sans-serif;
 }
 
 a {
@@ -23,4 +28,16 @@ a {
     color: white;
     background: black;
   }
+}
+
+.dropdown-container {
+  @apply absolute left-0 w-36 origin-top-right px-5 py-4 mt-5 border border-black border-t-0;
+}
+
+.footer-list-title {
+  @apply uppercase text-sm font-semibold mb-2;
+}
+
+.footer-list-item {
+  @apply uppercase text-xs pb-1;
 }
